<resources>
    <string name="app_name">AndroidProject</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_post">Create Post</string>
    <string name="logout">LogOut</string>
    <string name="create_new_post">Create New Post</string>
    <string name="title">Title</string>
    <string name="content">Content:</string>
    <string name="create">Create</string>
</resources>
